현대 ngv 링크 수정

--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 	<link rel="stylesheet" href="css/dl_global.css">
 	<link rel="stylesheet" href="css/client/normalize.css">
 	<link rel="stylesheet" href="css/client/common_ui.css">
-	<link rel="stylesheet" href="css/client/table.css">
 	<link rel="stylesheet" href="css/client/formstyle.css">
 	<link rel="stylesheet" href="css/client/ui.css">
 
@@ -183,7 +182,7 @@
 								<li>Figma</li>
 							</ul>
 							<div class="btn_area">
-								<a href="http://ngv-promotion.careerpass.kr/" target="_blank" class="click">Link</a>
+								<a href="https://www.hyundai-scholar.com/" target="_blank" class="click">Link</a>
 								<a href="javascript:void(0);" target="_blank" class="click">Source</a>
 							</div>
 						</li>
