metacover 추가 및 파일 수정

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=yes, height=device-height, viewport-fit=cover, shrink-to-fit=no">
 	<meta name="title" content="강기진 포트폴리오">
+	<meta property="og:image" content="images/img_metacover.png">
 	<meta name="description" content="강기진 포트폴리오">
 	<meta name="copyright" content="강기진 포트폴리오">
 	<meta name="keywords" content="강기진 포트폴리오">
