--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 						<div class="txt">
 							안녕하세요! 4년차 웹 퍼블리셔 강기진입니다.
 							<br />
-							웹 표준과 웹 접근성을 준수하여 웹 퍼블리싱 및 웹/앱 디자인을
+							웹 표준과 웹 접근성을 준수하여 웹/앱 퍼블리싱을
 							능숙하게 다룹니다.
 							<br />
 							팀원들과의 의견 공유와 배려를 매우 중요하게 생각하여
