--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
 							<li>Vue.js</li>
 							<li>Vuetify</li>
 							<li>TypeScript</li>
+							<li>GitHub</li>
 							<li>GitLab</li>
 							<li>SVN</li>
 						</ul>
