--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 							<li>PhotoShop</li>
 							<li>Illustrator</li>
 							<li>Figma</li>
-							<li>XD</li>
+							<li>Adobe XD</li>
 							<li>Node.js</li>
 							<li>Vue.js</li>
 							<li>Vuetify</li>
