노션 링크 수정

--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
 	
 	<div class="fixed_function fadein">
 		<a href="https://github.com/kangkijin" class="click" title="Github" target="_blank">Github</a>
-		<a href="https://www.notion.so/KIJIN-PortFolio-d61ba38eeb734541bb11dbde05283b10?pvs=4" class="click" title="Notion" target="_blank">Notion</a>
+		<a href="https://violet-bagel-d12.notion.site/KIJIN-PortFolio-d61ba38eeb734541bb11dbde05283b10?pvs=4" class="click" title="Notion" target="_blank">Notion</a>
 		<!-- <a href="resume.pdf" class="click" title="Resume" target="_blank">Resume</a> -->
 	</div>
 </body>
