--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<!-- <script src="src/locomotive-scroll-master/dist/locomotive-scroll.min.js"></script> -->
 	<script src="js/client/pp_common.js"></script>
 </head>
-<body>
+<body class="scrolly">
 	<!--[pp] skip nav -->
 	<nav class="skip_nav">
 		<a href="#container_skip">본문영역 바로가기</a>
